--- a/ac1617.cabal
+++ b/ac1617.cabal
@@ -17,4 +17,5 @@ library
   build-depends:   base >= 4.7 && < 5
                    , random
                    , process
+  default-language: Haskell2010
   exposed-modules: Qais Cp Probability MMM MMT SMT ListUtils Show St
